lamada a fragmento inicial

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">PollScope</string>
+    <string name="games_list_msg">Selecciona uno de tus juegos o crea uno nuevo</string>
+    <string name="warning_msg">Mensaje no encontrado</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
