llamada a actualizar timelapse

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,6 +103,8 @@
     <string name="prompt_password">Contraseña (Simple)</string>
     <string name="action_sign_up">Registrarse</string>
     <string name="action_sign_in">Entrar</string>
+    <string name="descarta_button_text">Descartar</string>
+    <string name="guarda_button_text">Guardar</string>
     <string name="error_invalid_email">Correo Electronico Invalido</string>
     <string name="user_creation_failed">Error al crear el usuario</string>
     <string name="error_incorrect_password">Contraseña Incorrecta</string>
