--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,11 +101,13 @@
     <!-- Strings related to login -->
     <string name="prompt_email">Correo Electronico</string>
     <string name="prompt_password">Contraseña (Simple)</string>
+    <string name="user_name">Nombre de Usuario (Corto)</string>
     <string name="action_sign_up">Registrarse</string>
     <string name="action_sign_in">Entrar</string>
     <string name="descarta_button_text">Descartar</string>
     <string name="guarda_button_text">Guardar</string>
     <string name="error_invalid_email">Correo Electronico Invalido</string>
+    <string name="error_user_name">Nombre de Usuario Invalido</string>
     <string name="user_creation_failed">Error al crear el usuario</string>
     <string name="error_incorrect_password">Contraseña Incorrecta</string>
     <string name="error_field_required">Campo Requerido</string>
