dialog para seleccionar jugadores de un juego

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,6 +106,7 @@
     <string name="action_sign_in">Entrar</string>
     <string name="descarta_button_text">Descartar</string>
     <string name="guarda_button_text">Guardar</string>
+    <string name="cancela_button_text">Cancelar</string>
     <string name="error_invalid_email">Correo Electronico Invalido</string>
     <string name="error_user_name">Nombre de Usuario Invalido</string>
     <string name="user_creation_failed">Error al crear el usuario</string>
